# editor

./: .gitignore  .prettierignore  01-TASK-IMPLEMENT-LANES.md  02-MULTI-EDITOR-REFACTORING.md  03-MACRO-EXPANSION-TASK.md  BRAINFUCK_MACRO_TUTORIAL.md  CLAUDE.md  Cargo.toml  ELECTRON_BUILD.md  MISSING_C99_FEATURES.md  README.md  RESTART_SERVER.md  SUPPORTED_FEATURES.md  TODO.md  TOOLCHAIN.md  bf-macro.tmLanguage.json  bfm-doom.asm  build-examples.sh  count-to-10.bf  cpu_expanded_ts.bf  debug_output.txt  doom.bfm  electron-builder.yml  eslint.config.js  example-hex-macros.bfm  forth-copy.asm  forth-copy.txt  generate-app-icons.js  generate-favicons.js  git_log.txt  here.bf  implementation_plan.md  index.html  inline-asm-implementation.md  malloc_test.asm  package-lock.json  package.json  prettier.config.cjs  rasm  rcc-README.md  (+48 more)
rcc-backend/: Cargo.toml
rcc-backend/src/: IMPLEMENTATION_ROADMAP.md  README_ARCHITECTURE.md  globals.rs  lib.rs  mod.rs  module_lowering.rs  module_lowering_tests.rs  naming.rs  simple_regalloc_tests.rs
rcc-backend/src/function/: builder.rs  calling_convention.rs  internal.rs  issue_analysis.md
rcc-backend/src/function/tests/: call_end_to_end_tests.rs  calling_convention_tests.rs  lowering_tests.rs  mod.rs  param_loading_tests.rs  stress_tests.rs
rcc-backend/src/instr/: branch.rs  gep.rs  helpers.rs  inline_asm.rs  load.rs  store.rs  unary.rs
rcc-backend/src/instr/binary/: comparison.rs  helpers.rs  lowering.rs  mod.rs
rcc-backend/src/instr/tests/: binary_tests.rs  branch_tests.rs  gep_integration_tests.rs  gep_tests.rs  integration_tests.rs  load_tests.rs  store_tests.rs  unary_tests.rs
rcc-backend/src/lower/: function.rs  instruction.rs  mod.rs  module.rs
rcc-backend/src/lower/instr/: alloca.rs  binary.rs  get_element_ptr.rs  inline_asm.rs  mod.rs  store.rs
rcc-backend/src/regmgmt/: README.md  allocator.rs  bank.rs  mod.rs  pressure.rs  tests.rs
rcc-backend/src/tests/: encapsulation_test.rs  integration_tests.rs  register_pressure_tests.rs
rcc-backend/src/v2/: IMPLEMENTATION_ROADMAP.md  globals.rs  lower.rs  naming.rs
rcc-backend/src/v2/function/: builder.rs  calling_convention.rs  internal.rs  lowering.rs  mod.rs
rcc-backend/src/v2/instr/: branch.rs  gep.rs  gep_fix.rs  helpers.rs  inline_asm.rs  load.rs  mod.rs  store.rs  unary.rs
rcc-backend/src/v2/lower/: function.rs  instruction.rs  mod.rs  module.rs
rcc-backend/src/v2/regmgmt/: README.md  allocator.rs  bank.rs  mod.rs  pressure.rs  tests.rs
rcc-backend/src/v2/tests/: integration_tests.rs  register_pressure_tests.rs
rcc-codegen/: Cargo.toml
rcc-codegen/src/: abi.rs  asm.rs  emit.rs  lib.rs  regalloc.rs
rcc-driver/: Cargo.toml
rcc-driver/src/: main.rs
rcc-ir/: Cargo.toml
rcc-ir/src/: ir.rs  lib.rs  lowering.rs  module_lowering.rs  module_lowering_tests.rs  simple.rs  simple_regalloc.rs  simple_regalloc_tests.rs
rcc-ir/src/lower/: block.rs  functions.rs  globals.rs  mod.rs
rcc-ir/src/lower/instr/: alloca.rs  arithmetic.rs  binary.rs  control_flow.rs  func.rs  get_element_ptr.rs  load.rs  mod.rs  (+1 more)
rcc-ir/src/v2/: CONFORMANCE_ANALYSIS.md  IMPLEMENTATION_ROADMAP.md  README.md  REGISTER_ALLOCATION_SUMMARY.md  REGISTER_MANAGEMENT_REFACTORING.md  REGISTER_PRESSURE_DESIGN.md  REGISTER_PRESSURE_INTEGRATION.md  TEST_SUMMARY.md  calling_convention.rs  function.rs  globals.rs  lower.rs  mod.rs  naming.rs  regalloc.rs  register_pressure.rs
rcc-preprocessor/: Cargo.toml
rcc-preprocessor/src/: lib.rs  main.rs  tests.rs
rcc-preprocessor/src/directives/: mod.rs
rcc-preprocessor/src/lexer/: mod.rs
rcc-preprocessor/src/parser/: mod.rs
rcc-test/: Cargo.toml  README.md  TRACE_FILES.md  TUI_README.md
rcc-test/src/: cli.rs  command.rs  compiler.rs  config.rs  lib.rs  main.rs  reporter.rs  runner.rs
rcc-test/src/tui/: app.rs  bfm_formatter.rs  event.rs  mod.rs  runner.rs  ui.rs
rust-bf/: Cargo.toml  build.sh
rust-bf/src/: lib.rs
rvm/: Cargo.toml  README.md  complex_breakpoints.md  mmio.md  run_tests.sh
rvm/src/: asm_formatter.rs  cli.rs  constants.rs  debug.rs  display_rgb565.rs  lib.rs  main.rs  settings.rs  tui_debugger.rs  vm.rs
rvm/src/debugger_ui/: breakpoints.rs  callstack.rs  disassembly.rs  help.rs  input_line.rs  memory.rs  mod.rs  output.rs  registers.rs  stack.rs  status_line.rs  watches.rs
rvm/src/mode/: add_watch.rs  breakpoint.rs  command.rs  goto.rs  memory_edit.rs  mod.rs  normal.rs
rvm/src/vm/: display.rs  execution.rs  instruction.rs  mmio.rs  mod.rs  state.rs  storage.rs  terminal.rs
rvm/tests/asm/: test_arithmetic.asm  test_bitwise.asm  test_comparison.asm  test_division.asm  test_hello.asm  test_jumps.asm  test_memory.asm
rvm/tests/expected/: test_comparison.txt
src/bf-macro-expander/: Cargo.toml  IMPLEMENTATION_STATUS.md  README.md  build-wasm.sh  output_rust.txt
src/bf-macro-expander/src/: ast.rs  expander.rs  expander_helpers.rs  expander_utils.rs  lexer.rs  lib.rs  main.rs  parser.rs  parser_old.rs  preprocessor.rs  source_map.rs  types.rs  wasm.rs
src/bf-macro-expander/tests/: debug_expand.rs  debug_expand2.rs  debug_macro_array.rs  debug_parse.rs  debug_tokenize.rs  expander_tests.rs  label_tests.rs  parameter_substitution_tests.rs  preserve_tests.rs  test_br.rs  test_comma_in_preserve.rs  test_for_with_index.rs  test_label_direct.rs  test_label_reset.rs  test_label_simple.rs  test_label_working.rs  test_loop_clean.rs  test_no_parens.rs  test_parse_loop.rs
src/ripple-asm/: Cargo.toml  README.md  build-wasm.sh  test.asm  test.bfm  test.pobj  test_brk.asm
src/ripple-asm/src/: assembler.rs  cpu_footer.bfm  cpu_header.bfm  disassembler.rs  encoder.rs  lib.rs  linker.rs  linker_main.rs  macro_formatter.rs  main.rs  parser.rs  types.rs  virtual_instructions.rs  wasm.rs
src/ripple-asm/tests/: integration_tests.rs
src/rust-bf/: Cargo.toml  README_WASM.md  build-wasm.sh  fizzbuzz.bf  optimized-bizzbuzz.bf  test-wasm.html  test-wasm.mjs  test_clear.bf  test_collapse.bf  test_collapse2.bf  test_collapse3.bf  test_collapse_heavy.bf  test_moves.bf  test_patterns.bf  test_set.bf
src/rust-bf/src/: lib.rs  main.rs
(+1268 files in other folders)
