[workspace]
members = [
]
exclude = [
    'rbt'
]


resolver = "2"

[workspace.dependencies]
# Common dependencies that all crates might use
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"

[workspace.lints.rust]
warnings = "deny"