[package]
name = "rcc-codegen"
version = "0.1.0"
edition = "2021"
description = "Ripple C99 Compiler - Code Generation Backend"

[dependencies]
rcc-common.workspace = true
thiserror.workspace = true
ripple-asm = { path = "../src/ripple-asm" }

[dev-dependencies]
pretty_assertions = "1.4"

[lints]
workspace = true