[package]
name = "rcc-driver"
version = "0.1.0"
edition = "2021"
description = "Ripple C99 Compiler - Main Driver"

[[bin]]
name = "rcc"
path = "src/main.rs"

[dependencies]
rcc-common.workspace = true
rcc-backend = { path = "../rcc-backend" }
rcc-codegen = { path = "../rcc-codegen" }
rcc-frontend = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
thiserror.workspace = true
log = { workspace = true }
env_logger = { workspace = true }