[package]
name = "rcc-driver"
version = "0.1.0"
edition = "2021"
description = "Ripple C99 Compiler - Main Driver"

[[bin]]
name = "rcc"
path = "src/main.rs"

[dependencies]
rcc-backend = { path = "../rcc-backend" }
rcc-codegen = { path = "../rcc-codegen" }
rcc-common = { workspace = true }
rcc-frontend = { workspace = true }
rcc-preprocessor = { path = "../rcc-preprocessor" }
clap = { version = "4.5", features = ["derive"] }
env_logger = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true