[package]
name = "rcc-ir"
version = "0.1.0"
edition = "2021"
description = "Ripple C99 Compiler - Intermediate Representation"

[dependencies]
rcc-common.workspace = true
rcc-codegen = { path = "../rcc-codegen" }
thiserror.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4"