[package]
name = "rcc-preprocessor"
version = "0.1.0"
edition = "2021"
authors = ["RCC Team"]
description = "C preprocessor for Ripple C Compiler"

[[bin]]
name = "rcpp"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
regex = "1.5"
log = "0.4"
env_logger = "0.10"
once_cell = "1.17"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
indoc = "2.0"
