[package]
name = "rcc-test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rct"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
anyhow = "1.0"
thiserror = "1.0"
similar = "2.3"
tokio = { version = "1.35", features = ["full"] }
indicatif = "0.17"
rayon = "1.8"
glob = "0.3"
ratatui = "0.26"
crossterm = "0.27"
num_cpus = "1.16"
rvm = { path = "../rvm" }
ripple-asm = { path = "../src/ripple-asm" }
rcc-frontend = { path = "../rcc-frontend" }
