[package]
name = "rust-bf"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_bf"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3          # Maximum optimization
lto = true             # Enable Link Time Optimization
codegen-units = 1      # Single codegen unit for better optimization
strip = true           # Strip symbols for smaller binary
panic = "abort"        # Smaller binary, no unwinding

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
  "-O4",
  "--enable-bulk-memory",
  "--flexible-inline-max-function-size",
  "4294967295",
]