[package]
name = "rvm"
version = "0.1.0"
edition = "2021"

[lib]
name = "rvm"
path = "src/lib.rs"

[[bin]]
name = "rvm"
path = "src/main.rs"

[dependencies]
ripple-asm = { path = "../src/ripple-asm" }
colored = "2.1"
ratatui = "0.26"
crossterm = "0.27"
tui-textarea = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.3"

[lints]
workspace = true