[package]
name = "bf-macro-expander"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack]
wasm-opt = false

[lib]
name = "bf_macro_expander"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "bfm"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
thiserror = "2.0"
regex = "1.11"
lazy_static = "1.5"

[dev-dependencies]
pretty_assertions = "1.4"

[features]
default = []
wasm = ["wasm-bindgen", "js-sys", "serde-wasm-bindgen", "console_error_panic_hook"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false