[package]
name = "ripple-asm"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack]
wasm-opt = false

[lib]
name = "ripple_asm"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rasm"
path = "src/main.rs"

[[bin]]
name = "rlink"
path = "src/linker_main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
thiserror = "2.0"
regex = "1.11"

[dev-dependencies]
pretty_assertions = "1.4"

[features]
default = []
wasm = ["wasm-bindgen", "js-sys", "serde-wasm-bindgen"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[target.wasm32-unknown-unknown]
rustflags = ["-C", "target-feature=+bulk-memory"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory"]