[package]
name = "bf"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack]
wasm-opt = false

[lib]
name = "bf_wasm"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "bf"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[target.wasm32-unknown-unknown]
rustflags = ["-C", "target-feature=+bulk-memory"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory"]